using FrameWork.Interface;
using FrameWork.Utils;
using UnityEngine;

public class PlayerManager : MonoBehaviour,IInitializable,IUpdatable
{
    private PlayerController _playerController;
    public void Init()
    {
        
    }
    public void LogicUpdate()
    {
        
    }

    
}